--- a/css/layout2.css
+++ b/css/layout2.css
@@ -14,7 +14,7 @@ p{
     background-size: cover;
 }
 
-.slogan{
+.main-slogan{
     color: white;
     font-size: 40px;
     font-weight: 500;
@@ -25,7 +25,7 @@ p{
     padding: 0.1px;
 }
 
-.content{
+.main-content{
     color: white;
     text-align: center;
     margin-left: auto;
@@ -33,7 +33,7 @@ p{
     margin-top: 40px;
 }
 
-.btn{
+.main-btn{
     width: 120px;
     height: 40px;
     margin-top: 55px;
