--- a/css/layout2.css
+++ b/css/layout2.css
@@ -12,6 +12,7 @@ p{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 
 .main-slogan{
@@ -37,8 +38,20 @@ p{
     width: 120px;
     height: 40px;
     margin-top: 55px;
+    padding: 1px;
     border-radius: 1px;
     border: none;
     color: rgb(87, 87, 87);
     font-size: 14px;
+}
+
+.gray-background{
+    width: 400px;
+    height:200px;
+    background-color: #eee;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
