--- a/css/layout2.css
+++ b/css/layout2.css
@@ -12,7 +12,6 @@ p{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    position: relative;
 }
 
 .main-slogan{
@@ -38,7 +37,6 @@ p{
     width: 120px;
     height: 40px;
     margin-top: 55px;
-    padding: 1px;
     border-radius: 1px;
     border: none;
     color: rgb(87, 87, 87);
@@ -46,12 +44,20 @@ p{
 }
 
 .gray-background{
-    width: 400px;
-    height:200px;
+    width: 560px;
+    /* height:200px; */
     background-color: #eee;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
+    margin: auto;   
+    padding: 0.1px;
+    top: 60px;
+}
+
+.gray-title{
+    text-align: center;
+}
+
+.gray-content{
+    text-align: center;
+    margin-bottom: 50px;
 }
