--- a/css/layout2.css
+++ b/css/layout2.css
@@ -1,4 +1,4 @@
-p{
+p, h4{
     margin: 0px;
 }
 
@@ -45,11 +45,10 @@ p{
 
 .gray-background{
     width: 560px;
-    /* height:200px; */
     background-color: #eee;
     position: relative;
     margin: auto;   
-    padding: 0.1px;
+    padding: 20px;
     top: 60px;
 }
 
@@ -59,5 +58,25 @@ p{
 
 .gray-content{
     text-align: center;
-    margin-bottom: 50px;
+    padding: 10px;
+}
+
+.flex-nav{
+    width: 800px;
+    display: flex;
+    background-color: lightcoral;
+    margin: auto;
+}
+
+.flex-item{
+    width: 100px;
+    margin-right: 10px;
+}
+
+.flex-item p{
+    padding: 10px;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    
 }
