--- a/css/animation.css
+++ b/css/animation.css
@@ -20,3 +20,16 @@
     width: 100%;
     display: block;
 }
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(172, 166, 166, 0.5);
+    top: 100%;
+}
+
+.shop-item :hover .overlay{
+    top: 50%;
+    transition: 0.5s;
+}
